<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bmi"
        android:textColor="@color/red_senai"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:text="@string/sign_new_user"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNewUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/ic_person_24"
                android:drawableTint="@color/red_senai"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/red_senai"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/ic_lock"
                android:drawableTint="@color/red_senai"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/alegreya_sc_italic"
                android:text="@string/name"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alegreya_sc_italic"
                android:text="@string/email"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alegreya_sc_italic"
                android:text="@string/password"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alegreya_sc_italic"
                android:text="@string/weight"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alegreya_sc_italic"
                android:text="@string/height"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/editTextWeight"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/ic_baseline_fitness_center_24"
                android:drawableTint="@color/red_senai"
                android:ems="10"
                android:inputType="numberDecimal"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/editTextHeight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/ic_straighten_24"
                android:drawableTint="@color/red_senai"
                android:ems="10"
                android:inputType="numberDecimal"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editTextWeight"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <Button
                android:id="@+id/buttonUserCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/create_user"
                app:layout_constraintEnd_toEndOf="@+id/editTextHeight"
                app:layout_constraintStart_toStartOf="@+id/editTextWeight"
                app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black_senai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/logo_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>