<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    tools:context=".BmiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black_senai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/logo_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Nome do usuário"
        android:textColor="@color/red_senai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_username"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/height"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_email"
        app:layout_constraintEnd_toEndOf="@+id/text_view_weight"
        app:layout_constraintTop_toBottomOf="@+id/text_view_weight" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bmi"
        android:textColor="@color/red_senai"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_height"
        app:layout_constraintTop_toBottomOf="@+id/text_view_height" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:lineSpacingExtra="16sp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_bmi"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/text_view_email"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/red_senai_transparent"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/height"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/height_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/height_input"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/weight"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/weight_input"
            app:layout_constraintStart_toStartOf="@+id/height_input"
            app:layout_constraintTop_toBottomOf="@+id/height_input" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/calculate_button"
            app:layout_constraintEnd_toEndOf="@+id/height_input"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/weight_input"
            app:layout_constraintTop_toBottomOf="@+id/weight_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email@usuario.com"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/text_view_username"
        app:layout_constraintTop_toBottomOf="@+id/text_view_username" />

</androidx.constraintlayout.widget.ConstraintLayout>